--- a/layouts/_default/baseof.html
+++ b/layouts/_default/baseof.html
@@ -1,5 +1,10 @@
-<html>
+<!doctype html>
+
+<html lang="en" dir="ltr">
+  {{- partial "head.html" . -}}
   <body>
-    <h1> Test </h1>
+    <div class="m">
+      {{- block "main" . }}{{- end }}
+    </div>
   </body>
 </html>
