--- a/layouts/home.html
+++ b/layouts/home.html
@@ -1,16 +1,3 @@
-<!doctype html>
-
-<html lang="en" dir="ltr">
-  {{- partial "head.html" . -}}
-  <body>
-    <a href="/u/">
-      <h1>Evan DiBona</h1>
-      <h2>Public</h2>
-    </a>
-
-    <a href="/v/">
-      <h1>Evan Charles DiBona</h1>
-      <h2>Private</h2>
-    </a>
-  </body>
-</html>
+{{define "main"}}
+  {{with .Content}}<div id="splash">{{.}}</div>{{end}}
+{{end}}
