--- a/layouts/partials/head.html
+++ b/layouts/partials/head.html
@@ -3,4 +3,5 @@
   <meta name="viewport" content="width=device-width,initial-scale=1">
   <link rel="stylesheet" href="/css/pure-min.css">
   <link rel="stylesheet" href="/css/grids-responsive-min.css">
+  <link rel="stylesheet" href="/css/main.css">
 </head>
