I think that this is a great structure. It will need to be kept in sync with my antinet, but if anything I'll be working from that instead of this. All of the info I have seems like it could flow very readily into this structure. Just have to keep it focused.

--- a/layouts/_default/section.html
+++ b/layouts/_default/section.html
@@ -8,7 +8,15 @@
     {{range .Pages}}
       <li><b>
           <a href="{{.RelPermalink}}">
-          {{.Title}} ... {{.File.BaseFileName}}
+          {{ if in .File.BaseFileName "index" }}
+            {{.Title}}
+          {{else}}
+            {{ if in .CurrentSection "/u/now/" }}
+            {{dateFormat "1/2/06" .Date}} ... {{.File.BaseFileName}}
+            {{else}}
+            {{dateFormat "1/2/06" .Date}} {{.Title}} ... {{.File.BaseFileName}}
+            {{end}}
+          {{end}}
         </a>
       </b></li>
     {{end}}
