--- a/layouts/_default/single.html
+++ b/layouts/_default/single.html
@@ -1,8 +1,11 @@
 {{define "main"}}
-{{- partial "single-header.html" . -}}
+{{- partial "header.html" . -}}
   <div class="article">
-    {{with .Title}}
-      <h1>{{.}}</h1>
+    {{if in .File.Path "u/now/"}}
+    {{else}}
+      {{with .Title}}
+        <h1>{{.}}</h1>
+      {{end}}
     {{end}}
 
     {{with .Content}}
