Unique quote on the front page. Took out the laws of power and sales quotes. Added a cron job. Also cron wasn't working because I needed an absolute path to hugo.

--- a/layouts/home.html
+++ b/layouts/home.html
@@ -1,3 +1,11 @@
 {{define "main"}}
-  {{with .Content}}<div id="splash">{{.}}</div>{{end}}
+  {{with .Content}}
+    <div id="splash">
+      {{.}}
+      {{with partial "qotd.html"}}
+        <bq class="splash">{{.}}</bq>
+      {{end}}
+    </div>
+  {{end}}
 {{end}}
+
