--- a/layouts/partials/head.html
+++ b/layouts/partials/head.html
@@ -3,6 +3,7 @@
   <meta name="viewport" content="width=device-width,initial-scale=1">
   <title>Evan DiBona ➤ {{.File.Dir}}" </title>
   <meta name="description" content="{{.Summary}}" />
+  <link rel="stylesheet" href="/css/base-min.css">
   <link rel="stylesheet" href="/css/pure-min.css">
   <link rel="stylesheet" href="/css/grids-responsive-min.css">
   <link rel="stylesheet" href="/css/main.css">
