--- a/layouts/partials/head.html
+++ b/layouts/partials/head.html
@@ -1,7 +1,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width,initial-scale=1">
-  <title>Evan DiBona ➤ {{.File.Dir}}" </title>
+  <title>Evan DiBona ➤ {{substr .File.Dir 0 -1}} </title>
   <meta name="description" content="{{.Summary}}" />
   <link rel="stylesheet" href="/css/base-min.css">
   <link rel="stylesheet" href="/css/pure-min.css">
