--- a/layouts/partials/qotd.html
+++ b/layouts/partials/qotd.html
@@ -1,1 +1,1 @@
-<p>“A wise man is full of strength, and a man of knowledge enhances his might. ”</p><p><i>– Proverbs 24:5</i></p>
+<p>“Make your work to be in keeping with your purpose ”</p><p><i>– Leonardo da Vinci</i></p>
