Dot leader experiment

--- a/layouts/_default/section.html
+++ b/layouts/_default/section.html
@@ -13,13 +13,15 @@
     {{else}}
       <!-- Reverse Numeric -->
       {{range .Pages.ByLinkTitle.Reverse}}
-        <li><b><a href="{{.RelPermalink}}">
+        <li class="dotted"><b><a href="{{.RelPermalink}}">
           {{if in .CurrentSection "/u/now/"}}
-            {{dateFormat "1/2/06" .Date}}
-              ... {{.File.BaseFileName}}
+            {{dateFormat "1/2/06" .Date}}</a>
+              <span class="flex"></span>
+              {{.File.BaseFileName}}
           {{else}}
-            {{dateFormat "1/2/06" .Date}} {{.Title}}
-              ... {{.File.BaseFileName}}
+            {{dateFormat "1/2/06" .Date}} {{.Title}}</a>
+              <span class="flex"></span>
+            {{.File.BaseFileName}}
           {{end}}
         </a></b></li>
       {{end}}
