--- a/layouts/partials/qotd.html
+++ b/layouts/partials/qotd.html
@@ -1,1 +1,1 @@
-<p>“Make your work to be in keeping with your purpose ”</p><p><i>– Leonardo da Vinci</i></p>
+<p>“Most of us spend too much time on what is urgent and not enough time on what is important. ”</p><p><i>– Stephen R. Covey</i></p>
