--- a/static/css/main.css
+++ b/static/css/main.css
@@ -8,9 +8,22 @@
 
 body {
   color: #6B5852;
+  font-family: serif; 
   background: #F6F0E7; 
-  font-size: 1.1em; 
+  font-size: 1.25em; 
+  letter-spacing: 0.5px; 
 }
+
+@font-face {
+  font-family: fell-french;
+  src: url('/fonts/FeFCrm2.ttf');
+}
+@font-face {
+  font-family: fell-french-sc;
+  src: url('/fonts/FeFCsc2.ttf');
+}
+
+h1, h2, h3 { font-family: fell-french; }
 h1 { font-size: 1.5em }
 h2 { font-size: 1.25em }
 h3 { font-size: 1.1em }
@@ -22,8 +35,8 @@ h3 { font-size: 1.1em }
 #splash a { text-decoration: none; }
 #splash .header { border-bottom: 1px solid gray; }
 
-bq.splash {   font-size: 1.5em; }
-bq.splash i { font-size: 0.85em; }
+bq.splash {   font-size: 1.25em; }
+bq.splash i { font-size: 0.95em; }
 
 img.portrait {
   padding: 0.5em 0; 
@@ -49,6 +62,10 @@ div.sep {
   height: 1.25em; 
 }
 
+span.tab {
+  padding: 0.75em; 
+}
+
 span.square-blue {
   padding: 0 0.4em;
   background: #8CBBBD; 
@@ -59,18 +76,17 @@ span.square-red {
   background: #F56C66; 
 }
 
-div.header h1 { letter-spacing: 0.05em; }
 div.header h1,h2,h3 {
   margin: 0.12em 0;
 }
 div.title h1 {
-  text-decoration: underline; 
+  /*text-decoration: underline;*/
   text-align: center; 
 }
 
 h1.u,h2.u, h3.u {
   text-align: left; 
-  font-variant: small-caps; 
+  font-family: fell-french-sc; /* Small Caps */
 }
 
 h1.v, h2.v, h3.v {
@@ -92,7 +108,10 @@ a.n { text-decoration: none; }
   border-bottom: 1px dashed black; 
 }
 .toc .flex { flex: 1 0; }
-.toc li.dotted a { text-decoration: none; }
+.toc li.dotted a { 
+text-decoration: none;
+  flex: 1 1;
+}
 .toc li.dotted b { display: flex; }
 
 footer {
