--- a/layouts/partials/qotd.html
+++ b/layouts/partials/qotd.html
@@ -1,1 +1,1 @@
-<p>“Most of us spend too much time on what is urgent and not enough time on what is important. ”</p><p><i>– Stephen R. Covey</i></p>
+<p>“As a bee gathering nectar does not harm or disturb the color & fragrance of the flower; so do the wise move through the world. ”</p><p><i>– Buddha</i></p>
