--- a/layouts/partials/qotd.html
+++ b/layouts/partials/qotd.html
@@ -1,1 +1,1 @@
-<p>“As a bee gathering nectar does not harm or disturb the color & fragrance of the flower; so do the wise move through the world. ”</p><p><i>– Buddha</i></p>
+<p>“What should young people do with their lives today? Many things, obviously. But the most daring thing is to create stable communities in which the terrible disease of loneliness can be cured.”</p><p><i>– Kurt Vonnegut</i></p>
