--- a/layouts/partials/qotd.html
+++ b/layouts/partials/qotd.html
@@ -1,1 +1,1 @@
-<p>“What should young people do with their lives today? Many things, obviously. But the most daring thing is to create stable communities in which the terrible disease of loneliness can be cured.”</p><p><i>– Kurt Vonnegut</i></p>
+<p>“A PART OF ALL YOU EARN IS YOURS TO KEEP. ”</p><p><i>– George Clason</i></p>
