--- a/layouts/partials/qotd.html
+++ b/layouts/partials/qotd.html
@@ -1,1 +1,1 @@
-<p>“A PART OF ALL YOU EARN IS YOURS TO KEEP. ”</p><p><i>– George Clason</i></p>
+<p>“Our life is what our thoughts make it.”</p><p><i>– Marcus Aurelius</i></p>
