--- a/layouts/partials/qotd.html
+++ b/layouts/partials/qotd.html
@@ -1,1 +1,1 @@
-<p>“Our life is what our thoughts make it.”</p><p><i>– Marcus Aurelius</i></p>
+<p>“Do the worst things first: when faced with unpleasant or difficult tasks, attend to them first thing in the morning while you're still fresh and before the world starts distracting you with its demands.”</p><p><i>– Anthony Iannarino</i></p>
