--- a/layouts/_default/baseof.html
+++ b/layouts/_default/baseof.html
@@ -4,7 +4,7 @@
   {{- partial "head.html" . -}}
   <body>
     <div class="m">
-      {{- block "main" . }}{{- end }}
+      {{ block "main" . }}{{ end }}
     </div>
     <footer>
     </footer>
