Now we're cooking. Template is making more sense. In the process of turning contents' sections into a partial. Narrowing down what will work on the notary page.

--- a/layouts/partials/qotd.html
+++ b/layouts/partials/qotd.html
@@ -1,1 +1,1 @@
-<p>“Do the worst things first: when faced with unpleasant or difficult tasks, attend to them first thing in the morning while you're still fresh and before the world starts distracting you with its demands.”</p><p><i>– Anthony Iannarino</i></p>
+<p>“There are secrets within secrets, though--always. ― David Foster Wallace</i></p>
