Alright this is a much better choice for the layout of the notary page.

--- a/layouts/partials/qotd.html
+++ b/layouts/partials/qotd.html
@@ -1,1 +1,1 @@
-<p>“There are secrets within secrets, though--always. ― David Foster Wallace</i></p>
+<p>“I cannot teach anybody how to cook. All I can do is show them, share methods with them.”</p><p><i>– Marco Pierre White</i></p>
