--- a/layouts/u/ntry.html
+++ b/layouts/u/ntry.html
@@ -1,24 +1,55 @@
 {{define "main"}}
   <h1>{{.Title}}</h1>
-
   <div class="pure-g">  
-    <!-- Main Info -->
-    <div class="pure-u-1 pure-u-md-1-2 pure-u-xl-1-3 article">
-      <h1>{{(.GetPage "/u/about").Title}}</h1>
+    <!-- New Layout -->
+    <div class="pure-u-1 ln-title">
+      <h2>{{(.GetPage "/u/about").Title}}</h2>
+    </div>
+    <div class="pure-u-1
+                pure-u-sm-1-6 pure-u-md-1-3 pure-u-lg-5-12">
+    </div>
+    <div class="pure-u-1 
+                pure-u-sm-5-6 pure-u-md-2-3 pure-u-lg-7-12">
+    <div class="pure-g"> <div class="pure-u-1">
+        <img alt="black and white selfie"
+             class="pure-img portrait"
+             src="/img/portrait-1.png">
+    </div> </div>
+    <div class="center">
+      {{partial "contact" .}}
+    </div>
+
       {{(.GetPage "/u/about").Content}}
     </div>
-    <div class="pure-u-1 pure-u-md-1-2 pure-u-xl-1-3 article">
-      <h1> {{(.GetPage "/u/ntry/2").Title}}</h1>
+    <div class="pure-u-1 ln-title">
+      <h2>{{(.GetPage "/u/ntry/2").Title}}</h2>
+    </div>
+    <div class="pure-u-1
+                pure-u-sm-1-6 pure-u-md-1-3 pure-u-lg-5-12">
+    </div>
+    <div class="pure-u-1 
+                pure-u-sm-5-6 pure-u-md-2-3 pure-u-lg-7-12">
       {{(.GetPage "/u/ntry/2").Content}}
-      <h1> {{(.GetPage "/u/ntry/8").Title}} </h1>
+    </div>
+    <div class="pure-u-1 ln-title">
+      <h2>{{(.GetPage "/u/ntry/8").Title}}</h2>
+    </div>
+    <div class="pure-u-1
+                pure-u-sm-1-6 pure-u-md-1-3 pure-u-lg-5-12">
+    </div>
+    <div class="pure-u-1 
+                pure-u-sm-5-6 pure-u-md-2-3 pure-u-lg-7-12">
       {{(.GetPage "/u/ntry/8").Content}}
     </div>
-    <div class="pure-u-1 pure-u-md-1-2 pure-u-xl-1-3 article">
-      <h1> {{(.GetPage "/u/ntry/9").Title}} </h1>
-      <p> {{(.GetPage "/u/ntry/9").Content}} </p>
-      {{partial "contact" .}}
-      <h1> Index </h1>
-      {{partial "ntry-index" .}}
+    <div class="pure-u-1 ln-title">
+      <h2>{{(.GetPage "/u/ntry/9").Title}}</h2>
+    </div>
+    <div class="pure-u-1
+                pure-u-sm-1-6 pure-u-md-1-3 pure-u-lg-5-12">
+    </div>
+    <div class="pure-u-1 
+                pure-u-sm-5-6 pure-u-md-2-3 pure-u-lg-7-12">
+      {{(.GetPage "/u/ntry/9").Content}}
     </div>
   </div>
 
