--- a/layouts/partials/qotd.html
+++ b/layouts/partials/qotd.html
@@ -1,1 +1,1 @@
-<p>“I cannot teach anybody how to cook. All I can do is show them, share methods with them.”</p><p><i>– Marco Pierre White</i></p>
+<p>“But as for the cowardly, the faithless, the detestable, as for murderers, the sexually immoral, sorcerers, idolaters, and all liars, their portion will be in the lake that burns with fire and sulfur, which is the second death.”</p><p><i>– Revelations 21:8</i></p>
