--- a/layouts/u/ntry.html
+++ b/layouts/u/ntry.html
@@ -1,24 +1,29 @@
 {{define "main"}}
-  <h1>{{.Title}}</h1>
+  <div class="pure-g">
+    <div class="pure-u-1 center">
+      <h1 class="ntry-h"> Evan DiBona   </h1>
+      <h2 class="ntry-h"> Notary Public </h2>
+    </div>
+  </div>
   <div class="pure-g">  
-    <!-- New Layout -->
+    <div class="pure-u-1 c">
+    </div>
     <div class="pure-u-1 ln-title">
       <h2>{{(.GetPage "/u/about").Title}}</h2>
     </div>
     <div class="pure-u-1
                 pure-u-sm-1-6 pure-u-md-1-3 pure-u-lg-5-12">
     </div>
-    <div class="pure-u-1 
+    <div class="article pure-u-1 
                 pure-u-sm-5-6 pure-u-md-2-3 pure-u-lg-7-12">
-    <div class="pure-g"> <div class="pure-u-1">
-        <img alt="black and white selfie"
-             class="pure-img portrait"
-             src="/img/portrait-1.png">
-    </div> </div>
-    <div class="center">
-      {{partial "contact" .}}
-    </div>
-
+      <div class="pure-g"> <div class="pure-u-1">
+          <img alt="black and white selfie"
+               class="pure-img portrait"
+               src="/img/portrait-1.png">
+      </div> </div>
+      <div class="center">
+        {{partial "contact" .}}
+      </div>
       {{(.GetPage "/u/about").Content}}
     </div>
     <div class="pure-u-1 ln-title">
@@ -27,7 +32,7 @@
     <div class="pure-u-1
                 pure-u-sm-1-6 pure-u-md-1-3 pure-u-lg-5-12">
     </div>
-    <div class="pure-u-1 
+    <div class="article pure-u-1 
                 pure-u-sm-5-6 pure-u-md-2-3 pure-u-lg-7-12">
       {{(.GetPage "/u/ntry/2").Content}}
     </div>
@@ -37,7 +42,7 @@
     <div class="pure-u-1
                 pure-u-sm-1-6 pure-u-md-1-3 pure-u-lg-5-12">
     </div>
-    <div class="pure-u-1 
+    <div class="article pure-u-1 
                 pure-u-sm-5-6 pure-u-md-2-3 pure-u-lg-7-12">
       {{(.GetPage "/u/ntry/8").Content}}
     </div>
@@ -47,9 +52,13 @@
     <div class="pure-u-1
                 pure-u-sm-1-6 pure-u-md-1-3 pure-u-lg-5-12">
     </div>
-    <div class="pure-u-1 
+    <div class="article pure-u-1 
                 pure-u-sm-5-6 pure-u-md-2-3 pure-u-lg-7-12">
       {{(.GetPage "/u/ntry/9").Content}}
+      <div class=" c center">
+        <h3> Phone & Email </h3>
+        {{partial "contact" .}}
+      </div>
     </div>
   </div>
 
