Fixed structure of layout locations.

--- a/layouts/partials/qotd.html
+++ b/layouts/partials/qotd.html
@@ -1,1 +1,1 @@
-<p>“But as for the cowardly, the faithless, the detestable, as for murderers, the sexually immoral, sorcerers, idolaters, and all liars, their portion will be in the lake that burns with fire and sulfur, which is the second death.”</p><p><i>– Revelations 21:8</i></p>
+<p>“If there are no stupid questions, then what kind of questions do stupid people ask? Do they get smart just in time to ask questions?”</p><p><i>– Scott Adams</i></p>
