--- a/layouts/partials/qotd.html
+++ b/layouts/partials/qotd.html
@@ -1,1 +1,1 @@
-<p>“If there are no stupid questions, then what kind of questions do stupid people ask? Do they get smart just in time to ask questions?”</p><p><i>– Scott Adams</i></p>
+<p>“If ye love wealth better than liberty, the tranquility of servitude better than the animating contest of freedom, go home from us in peace. We ask not your counsels or arms. Crouch down and lick the hands which feed you. May your chains set lightly upon you, and may posterity forget that ye were our countrymen.”</p><p><i>– Samuel Adams</i></p>
