--- a/static/css/main.css
+++ b/static/css/main.css
@@ -21,6 +21,9 @@ body {
   padding: 0 0.5em; 
 }
 
+.spacer   { height: 5em; }
+.h-spacer { padding-right: 0.5em; }
+
 /*** FONTS ***/
 
 @font-face {
@@ -72,6 +75,25 @@ a {
 a.n { background: none;  }
 .article a:link    { background: #6B585230; }
 .article a:hover   { background: #6B5852; color: #F6F0E7; }
+
+div.saus-links {
+  text-align: left; 
+  line-height: 1.8em; 
+  word-spacing: 0.3em; 
+}
+span.saus-link {
+  color:      #6B5852; 
+  background: #6B585220; 
+  border-left: 0.5em solid #6B585290;
+  padding: 0.25em  0.5em; 
+  margin: 2.5em  0; 
+  font-weight: 600; 
+  font-family: sans-serif; 
+  font-size: 0.9em; 
+  white-space: nowrap; 
+}
+span.saus-link a {
+}
 
 
 
@@ -230,12 +252,18 @@ footer {
 .c   { margin: 0 auto; }
 .pure-table {
   border: none; 
-  border-right: 1px solid #6B585240;
 }
-.pure-table td, .pure-table th {
+.pure-table td {
   border-left: 1px solid #6B585240;
+}
+.pure-table th {
+  border: none; 
+  color: #6B5852;
 }
 .pure-table-odd td {
   background: #6B585240;
+}
+.pure-table thead {
+  background: none; 
 }
 
